--- a/Trabalho_ANN_01_Greg.ipynb
+++ b/Trabalho_ANN_01_Greg.ipynb
@@ -45,7 +45,6 @@
       },
       "source": [
         "# bibliotecas usadas\n",
-        "import os\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -55,7 +54,7 @@
         "\n",
         "np.random.seed(0)"
       ],
-      "execution_count": 1,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -67,45 +66,35 @@
         "# para gerar o grafico no browser\n",
         "%matplotlib inline"
       ],
-      "execution_count": 2,
+      "execution_count": 59,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "97dzq_Av8cll"
+        "id": "97dzq_Av8cll",
+        "outputId": "d7bb6596-0779-47d0-b902-22b768201753",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# local dos dados e modifica o diretorio\n",
-        "# path='/content/dados.csv'\n",
-        "# os.chdir(path)"
+        "!git clone https://github.com/gregoriullmann/Trabalho1_ANN_2021\n",
+        "%cd Trabalho1_ANN_2021\n"
       ],
-      "execution_count": 3,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0dySLmFh-Ln2",
-        "outputId": "54095990-d4ff-4a5c-faf8-bccddf56ee42"
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount(\"/content/drive\")\n",
-        "%cd /content/drive/My Drive/ANN/Trabalho_01/opcao01\n",
-        "%ls"
-      ],
-      "execution_count": 4,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n",
-            "/content/drive/My Drive/ANN/Trabalho_01/opcao01\n",
-            "dados.csv  Trabalho_ANN_01_Greg.ipynb\n"
+            "Cloning into 'Trabalho1_ANN_2021'...\n",
+            "remote: Enumerating objects: 10, done.\u001b[K\n",
+            "remote: Counting objects:  10% (1/10)\u001b[K\rremote: Counting objects:  20% (2/10)\u001b[K\rremote: Counting objects:  30% (3/10)\u001b[K\rremote: Counting objects:  40% (4/10)\u001b[K\rremote: Counting objects:  50% (5/10)\u001b[K\rremote: Counting objects:  60% (6/10)\u001b[K\rremote: Counting objects:  70% (7/10)\u001b[K\rremote: Counting objects:  80% (8/10)\u001b[K\rremote: Counting objects:  90% (9/10)\u001b[K\rremote: Counting objects: 100% (10/10)\u001b[K\rremote: Counting objects: 100% (10/10), done.\u001b[K\n",
+            "remote: Compressing objects:  10% (1/10)\u001b[K\rremote: Compressing objects:  20% (2/10)\u001b[K\rremote: Compressing objects:  30% (3/10)\u001b[K\rremote: Compressing objects:  40% (4/10)\u001b[K\rremote: Compressing objects:  50% (5/10)\u001b[K\rremote: Compressing objects:  60% (6/10)\u001b[K\rremote: Compressing objects:  70% (7/10)\u001b[K\rremote: Compressing objects:  80% (8/10)\u001b[K\rremote: Compressing objects:  90% (9/10)\u001b[K\rremote: Compressing objects: 100% (10/10)\u001b[K\rremote: Compressing objects: 100% (10/10), done.\u001b[K\n",
+            "Unpacking objects:  10% (1/10)   \rUnpacking objects:  20% (2/10)   \rUnpacking objects:  30% (3/10)   \rUnpacking objects:  40% (4/10)   \rUnpacking objects:  50% (5/10)   \rremote: Total 10 (delta 2), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects:  60% (6/10)   \rUnpacking objects:  70% (7/10)   \rUnpacking objects:  80% (8/10)   \rUnpacking objects:  90% (9/10)   \rUnpacking objects: 100% (10/10)   \rUnpacking objects: 100% (10/10), done.\n",
+            "/content/Trabalho1_ANN_2021/Trabalho1_ANN_2021/Trabalho1_ANN_2021\n"
           ],
           "name": "stdout"
         }
@@ -114,18 +103,32 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "0dySLmFh-Ln2"
+      },
+      "source": [
+        "#from google.colab import drive\n",
+        "#drive.mount(\"/content/drive\")\n",
+        "#%cd /content/drive/My Drive/ANN/Trabalho_01/opcao01\n",
+        "#%ls"
+      ],
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "poo2kvF6QZgo",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2e15637e-dca5-40df-8ddd-737c00eeaca9"
+        "outputId": "24e67811-05cf-4da4-ee7b-f5eb52a2a4a6"
       },
       "source": [
         "# leitura dos dados\n",
         "DAT=pd.read_csv(\"dados.csv\", sep=';')\n",
         "print(DAT)\n"
       ],
-      "execution_count": 5,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +181,7 @@
         "Dat_Select=DAT.iloc[:,Index].copy()\n",
         "#print(Dat_Select)"
       ],
-      "execution_count": 6,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -198,7 +201,7 @@
         "        x[i]=(x[i]-a)/(b-a)\n",
         "    return x"
       ],
-      "execution_count": 7,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -218,7 +221,7 @@
         "        x[i]=x[i]*(b-a)+a\n",
         "    return x"
       ],
-      "execution_count": 8,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -232,7 +235,7 @@
         "DAT_OLD=Dat_Select.copy()\n",
         "DAT=Normatiza(Dat_Select)"
       ],
-      "execution_count": 9,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -242,7 +245,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e9b3903-577a-4af1-a43b-09142726c89f"
+        "outputId": "1f5b9cfa-cb82-457e-9b83-e03a9ea3cd2a"
       },
       "source": [
         "# separa os dados em treino e teste\n",
@@ -250,7 +253,7 @@
         "test=DAT.drop(train.index)\n",
         "print(DAT)"
       ],
-      "execution_count": 10,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +301,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0af220cf-77dc-4c81-a11d-0b449d6e9ee2"
+        "outputId": "72a4ca07-eedf-4a5f-c73b-d0e8f881398a"
       },
       "source": [
         "# obtem as variaveis independentes (treino e teste)\n",
@@ -307,7 +310,7 @@
         "X_OLD=DAT_OLD.iloc[:,[0,1,2,3]]\n",
         "print(x_train)"
       ],
-      "execution_count": 11,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +352,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d79b0a5a-a672-4a2c-9a95-324259f6fd93"
+        "outputId": "5eed1456-82cd-4c79-d151-18f4ec82d088"
       },
       "source": [
         "# obtem as variaveis dependentes (treino e teste)\n",
@@ -358,7 +361,7 @@
         "Y_OLD=DAT_OLD.iloc[:,[4]]\n",
         "print(y_train)"
       ],
-      "execution_count": 12,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +405,7 @@
         "# define a rede neural \n",
         "clf = MLPRegressor(solver='lbfgs',activation='tanh',alpha=0.00001,hidden_layer_sizes=(6,),learning_rate='constant', random_state=None)"
       ],
-      "execution_count": 13,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -412,13 +415,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0539272c-8b0f-4f5b-de9d-b731b506a170"
+        "outputId": "d5d11d68-26b6-4dde-b2bf-1894bf8610db"
       },
       "source": [
         "# treina a rede neural\n",
         "clf.fit(x_train, y_train)"
       ],
-      "execution_count": 14,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,7 +448,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 71
         }
       ]
     },
@@ -459,7 +462,7 @@
         "y_calc_train=clf.predict(x_train)\n",
         "y_calc_test=clf.predict(x_test)"
       ],
-      "execution_count": 15,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -475,7 +478,7 @@
         "y_calc_train.columns = col_names\n",
         "y_calc_test.columns = col_names"
       ],
-      "execution_count": 16,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -488,7 +491,7 @@
         "y_calc_train=Original(y_calc_train,Y_OLD)\n",
         "y_calc_test=Original(y_calc_test,Y_OLD)"
       ],
-      "execution_count": 17,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -503,7 +506,7 @@
         "train=Original(y_train,Y_OLD)\n",
         "test=Original(y_test,Y_OLD)"
       ],
-      "execution_count": 18,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -518,7 +521,7 @@
         "effici_calc_train=y_calc_train['efficiency'].copy()\n",
         "effici_obs_train=train['efficiency'].copy()"
       ],
-      "execution_count": 19,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -533,7 +536,7 @@
         "effici_calc_test=y_calc_test['efficiency'].copy()\n",
         "effici_obs_test=test['efficiency'].copy()"
       ],
-      "execution_count": 20,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -544,7 +547,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 279
         },
-        "outputId": "795f7ec9-2972-4073-9db1-cc30b35592af"
+        "outputId": "9cbf1a36-4d16-4894-adac-9f92dc510210"
       },
       "source": [
         "# expressa os dois dados em figura\n",
@@ -558,7 +561,7 @@
         "plt.xlabel('efficiency Obs')\n",
         "plt.show()"
       ],
-      "execution_count": 21,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "display_data",
@@ -582,7 +585,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8fb86402-e598-4b2d-be99-f40e53c834e2"
+        "outputId": "be933f37-7845-4ff5-c6e8-4fbb7369be0e"
       },
       "source": [
         "mse=mean_squared_error(effici_obs_test,effici_calc_test)\n",
@@ -590,7 +593,7 @@
         "R2=r2_score(effici_obs_test,effici_calc_test)\n",
         "print(\"R^2 teste=\",R2)"
       ],
-      "execution_count": 22,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -609,7 +612,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7d1da106-f2d6-4a91-9ede-3d2e93001587"
+        "outputId": "9e11a119-6111-4c55-d8c6-c313338c9a9a"
       },
       "source": [
         "mse=mean_squared_error(effici_obs_train,effici_calc_train)\n",
@@ -617,7 +620,7 @@
         "R2=r2_score(effici_obs_train,effici_calc_train)\n",
         "print(\"R^2 treino=\",R2)"
       ],
-      "execution_count": 23,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
