--- a/Trabalho_ANN_01_Greg.ipynb
+++ b/Trabalho_ANN_01_Greg.ipynb
@@ -54,7 +54,7 @@
         "\n",
         "np.random.seed(0)"
       ],
-      "execution_count": 58,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -66,35 +66,35 @@
         "# para gerar o grafico no browser\n",
         "%matplotlib inline"
       ],
-      "execution_count": 59,
+      "execution_count": 92,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "97dzq_Av8cll",
-        "outputId": "d7bb6596-0779-47d0-b902-22b768201753",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "72d149a6-0c23-4985-abe9-96871bc239c5"
       },
       "source": [
         "# local dos dados e modifica o diretorio\n",
         "!git clone https://github.com/gregoriullmann/Trabalho1_ANN_2021\n",
         "%cd Trabalho1_ANN_2021\n"
       ],
-      "execution_count": 60,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'Trabalho1_ANN_2021'...\n",
-            "remote: Enumerating objects: 10, done.\u001b[K\n",
-            "remote: Counting objects:  10% (1/10)\u001b[K\rremote: Counting objects:  20% (2/10)\u001b[K\rremote: Counting objects:  30% (3/10)\u001b[K\rremote: Counting objects:  40% (4/10)\u001b[K\rremote: Counting objects:  50% (5/10)\u001b[K\rremote: Counting objects:  60% (6/10)\u001b[K\rremote: Counting objects:  70% (7/10)\u001b[K\rremote: Counting objects:  80% (8/10)\u001b[K\rremote: Counting objects:  90% (9/10)\u001b[K\rremote: Counting objects: 100% (10/10)\u001b[K\rremote: Counting objects: 100% (10/10), done.\u001b[K\n",
-            "remote: Compressing objects:  10% (1/10)\u001b[K\rremote: Compressing objects:  20% (2/10)\u001b[K\rremote: Compressing objects:  30% (3/10)\u001b[K\rremote: Compressing objects:  40% (4/10)\u001b[K\rremote: Compressing objects:  50% (5/10)\u001b[K\rremote: Compressing objects:  60% (6/10)\u001b[K\rremote: Compressing objects:  70% (7/10)\u001b[K\rremote: Compressing objects:  80% (8/10)\u001b[K\rremote: Compressing objects:  90% (9/10)\u001b[K\rremote: Compressing objects: 100% (10/10)\u001b[K\rremote: Compressing objects: 100% (10/10), done.\u001b[K\n",
-            "Unpacking objects:  10% (1/10)   \rUnpacking objects:  20% (2/10)   \rUnpacking objects:  30% (3/10)   \rUnpacking objects:  40% (4/10)   \rUnpacking objects:  50% (5/10)   \rremote: Total 10 (delta 2), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects:  60% (6/10)   \rUnpacking objects:  70% (7/10)   \rUnpacking objects:  80% (8/10)   \rUnpacking objects:  90% (9/10)   \rUnpacking objects: 100% (10/10)   \rUnpacking objects: 100% (10/10), done.\n",
-            "/content/Trabalho1_ANN_2021/Trabalho1_ANN_2021/Trabalho1_ANN_2021\n"
+            "remote: Enumerating objects: 13, done.\u001b[K\n",
+            "remote: Counting objects:   7% (1/13)\u001b[K\rremote: Counting objects:  15% (2/13)\u001b[K\rremote: Counting objects:  23% (3/13)\u001b[K\rremote: Counting objects:  30% (4/13)\u001b[K\rremote: Counting objects:  38% (5/13)\u001b[K\rremote: Counting objects:  46% (6/13)\u001b[K\rremote: Counting objects:  53% (7/13)\u001b[K\rremote: Counting objects:  61% (8/13)\u001b[K\rremote: Counting objects:  69% (9/13)\u001b[K\rremote: Counting objects:  76% (10/13)\u001b[K\rremote: Counting objects:  84% (11/13)\u001b[K\rremote: Counting objects:  92% (12/13)\u001b[K\rremote: Counting objects: 100% (13/13)\u001b[K\rremote: Counting objects: 100% (13/13), done.\u001b[K\n",
+            "remote: Compressing objects:   7% (1/13)\u001b[K\rremote: Compressing objects:  15% (2/13)\u001b[K\rremote: Compressing objects:  23% (3/13)\u001b[K\rremote: Compressing objects:  30% (4/13)\u001b[K\rremote: Compressing objects:  38% (5/13)\u001b[K\rremote: Compressing objects:  46% (6/13)\u001b[K\rremote: Compressing objects:  53% (7/13)\u001b[K\rremote: Compressing objects:  61% (8/13)\u001b[K\rremote: Compressing objects:  69% (9/13)\u001b[K\rremote: Compressing objects:  76% (10/13)\u001b[K\rremote: Compressing objects:  84% (11/13)\u001b[K\rremote: Compressing objects:  92% (12/13)\u001b[K\rremote: Compressing objects: 100% (13/13)\u001b[K\rremote: Compressing objects: 100% (13/13), done.\u001b[K\n",
+            "Unpacking objects:   7% (1/13)   \rUnpacking objects:  15% (2/13)   \rUnpacking objects:  23% (3/13)   \rUnpacking objects:  30% (4/13)   \rUnpacking objects:  38% (5/13)   \rUnpacking objects:  46% (6/13)   \rUnpacking objects:  53% (7/13)   \rUnpacking objects:  61% (8/13)   \rUnpacking objects:  69% (9/13)   \rUnpacking objects:  76% (10/13)   \rremote: Total 13 (delta 4), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects:  84% (11/13)   \rUnpacking objects:  92% (12/13)   \rUnpacking objects: 100% (13/13)   \rUnpacking objects: 100% (13/13), done.\n",
+            "/content/Trabalho1_ANN_2021/Trabalho1_ANN_2021/Trabalho1_ANN_2021/Trabalho_ANN_01_opcao02/Trabalho1_ANN_2021\n"
           ],
           "name": "stdout"
         }
@@ -111,7 +111,7 @@
         "#%cd /content/drive/My Drive/ANN/Trabalho_01/opcao01\n",
         "#%ls"
       ],
-      "execution_count": 61,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -121,14 +121,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "24e67811-05cf-4da4-ee7b-f5eb52a2a4a6"
+        "outputId": "228aef3f-f7dd-4f62-a399-50246b08615e"
       },
       "source": [
         "# leitura dos dados\n",
         "DAT=pd.read_csv(\"dados.csv\", sep=';')\n",
         "print(DAT)\n"
       ],
-      "execution_count": 62,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "Dat_Select=DAT.iloc[:,Index].copy()\n",
         "#print(Dat_Select)"
       ],
-      "execution_count": 63,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
         "        x[i]=(x[i]-a)/(b-a)\n",
         "    return x"
       ],
-      "execution_count": 64,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -221,7 +221,7 @@
         "        x[i]=x[i]*(b-a)+a\n",
         "    return x"
       ],
-      "execution_count": 65,
+      "execution_count": 98,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
         "DAT_OLD=Dat_Select.copy()\n",
         "DAT=Normatiza(Dat_Select)"
       ],
-      "execution_count": 66,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1f5b9cfa-cb82-457e-9b83-e03a9ea3cd2a"
+        "outputId": "1c922ab8-f781-4a69-e9b5-cf1060a44085"
       },
       "source": [
         "# separa os dados em treino e teste\n",
@@ -253,7 +253,7 @@
         "test=DAT.drop(train.index)\n",
         "print(DAT)"
       ],
-      "execution_count": 67,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +301,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "72a4ca07-eedf-4a5f-c73b-d0e8f881398a"
+        "outputId": "df145d30-7a30-4137-9b97-71f692930b8f"
       },
       "source": [
         "# obtem as variaveis independentes (treino e teste)\n",
@@ -310,7 +310,7 @@
         "X_OLD=DAT_OLD.iloc[:,[0,1,2,3]]\n",
         "print(x_train)"
       ],
-      "execution_count": 68,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +352,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5eed1456-82cd-4c79-d151-18f4ec82d088"
+        "outputId": "a252f626-a078-4ec0-dd62-bfeb89aef040"
       },
       "source": [
         "# obtem as variaveis dependentes (treino e teste)\n",
@@ -361,7 +361,7 @@
         "Y_OLD=DAT_OLD.iloc[:,[4]]\n",
         "print(y_train)"
       ],
-      "execution_count": 69,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +405,7 @@
         "# define a rede neural \n",
         "clf = MLPRegressor(solver='lbfgs',activation='tanh',alpha=0.00001,hidden_layer_sizes=(6,),learning_rate='constant', random_state=None)"
       ],
-      "execution_count": 70,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -415,13 +415,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d5d11d68-26b6-4dde-b2bf-1894bf8610db"
+        "outputId": "18f45d37-98c3-457e-d1a6-06c96be1b9f1"
       },
       "source": [
         "# treina a rede neural\n",
         "clf.fit(x_train, y_train)"
       ],
-      "execution_count": 71,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +448,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 104
         }
       ]
     },
@@ -462,7 +462,7 @@
         "y_calc_train=clf.predict(x_train)\n",
         "y_calc_test=clf.predict(x_test)"
       ],
-      "execution_count": 72,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -478,7 +478,7 @@
         "y_calc_train.columns = col_names\n",
         "y_calc_test.columns = col_names"
       ],
-      "execution_count": 73,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -491,7 +491,7 @@
         "y_calc_train=Original(y_calc_train,Y_OLD)\n",
         "y_calc_test=Original(y_calc_test,Y_OLD)"
       ],
-      "execution_count": 74,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -506,7 +506,7 @@
         "train=Original(y_train,Y_OLD)\n",
         "test=Original(y_test,Y_OLD)"
       ],
-      "execution_count": 75,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -521,7 +521,7 @@
         "effici_calc_train=y_calc_train['efficiency'].copy()\n",
         "effici_obs_train=train['efficiency'].copy()"
       ],
-      "execution_count": 76,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -536,7 +536,7 @@
         "effici_calc_test=y_calc_test['efficiency'].copy()\n",
         "effici_obs_test=test['efficiency'].copy()"
       ],
-      "execution_count": 77,
+      "execution_count": 110,
       "outputs": []
     },
     {
@@ -547,7 +547,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 279
         },
-        "outputId": "9cbf1a36-4d16-4894-adac-9f92dc510210"
+        "outputId": "ae55b999-0aee-4a59-dc87-5cb99d9ec940"
       },
       "source": [
         "# expressa os dois dados em figura\n",
@@ -561,7 +561,7 @@
         "plt.xlabel('efficiency Obs')\n",
         "plt.show()"
       ],
-      "execution_count": 78,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "display_data",
@@ -585,7 +585,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "be933f37-7845-4ff5-c6e8-4fbb7369be0e"
+        "outputId": "ceeab969-270d-4761-f17b-8406070467c2"
       },
       "source": [
         "mse=mean_squared_error(effici_obs_test,effici_calc_test)\n",
@@ -593,7 +593,7 @@
         "R2=r2_score(effici_obs_test,effici_calc_test)\n",
         "print(\"R^2 teste=\",R2)"
       ],
-      "execution_count": 79,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,7 +612,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9e11a119-6111-4c55-d8c6-c313338c9a9a"
+        "outputId": "5b41de6f-2b59-4f9f-93b7-5cdc5a4ceb02"
       },
       "source": [
         "mse=mean_squared_error(effici_obs_train,effici_calc_train)\n",
@@ -620,7 +620,7 @@
         "R2=r2_score(effici_obs_train,effici_calc_train)\n",
         "print(\"R^2 treino=\",R2)"
       ],
-      "execution_count": 80,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
